k8s/gatekeeper/templates/no-host-namespace.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8snohostnamespace
spec:
  crd:
    spec:
      names:
        kind: K8sNoHostNamespace
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8snohostnamespace

        violation[{"msg": msg}] {
          input.review.object.spec.hostNetwork == true
          msg := "hostNetwork is not allowed"
        }

        violation[{"msg": msg}] {
          input.review.object.spec.hostPID == true
          msg := "hostPID is not allowed"
        }

        violation[{"msg": msg}] {
          input.review.object.spec.hostIPC == true
          msg := "hostIPC is not allowed"
        }
